--- a/templates/landing.jade
+++ b/templates/landing.jade
@@ -26,7 +26,7 @@ block content
           ul.list-inline
             li
               a(href="#", class="btn btn-lg intro-button")
-                span  Coming soon!
+                span  COMING SOON
         .col-md-3
     .row
       .col-md-12.intro-hedaer
