--- a/templates/landing.jade
+++ b/templates/landing.jade
@@ -25,8 +25,8 @@ block content
         .main-header-buttons
           ul.list-inline
             li
-              a(href="http://browser.sieveable.io", class="btn btn-lg intro-button")
-                span Start Searching
+              a(href="#", class="btn btn-lg intro-button")
+                span coming soon!
         .col-md-3
     .row
       .col-md-12.intro-hedaer
